# rust_image_compress

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/rust_image_compress_example/: MainActivity.kt
example/integration_test/: simple_test.dart
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: rust_image_compress.podspec
lib/: rust_image_compress.dart
lib/models/: compression_config.dart  compression_result.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: simple.dart
linux/: CMakeLists.txt
macos/: rust_image_compress.podspec
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: simple.rs
windows/: CMakeLists.txt
